2012-09-11 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: change back the tests for leading and trailing
	spaces to use the function isspace instead of isgraph based on the
	suggestion from Gaurav Agarwal

2012-09-10 John Wu <John dot Wu at ACM dot org>
	* src/array_t.cpp: consolidate deletion of actual into the
	function freeMemory

2012-09-07 John Wu <John dot Wu at ACM dot org>
	* doc/dataLoading.html, examples/ardea.cpp: update documentation
	about the options of inputing meta tags and long list of column
	names and types (in response to questions from Andrew Olson)
	* examples/ibis.cpp: add call to bitvectorToCoordinates to help
	debug a problem with FastQuery

2012-09-05 John Wu <John dot Wu at ACM dot org>
	* src/array_t.h, src/array_t.cpp: change the test on actual
	because it might be nil when the caller specifies an extenal piece
	of storage
	* src/idirekte.cpp: constructor0 neglected to take into account of
	the null mask and causes large integers to be treated as normal
	values (which in turn causes the exception related to array_t size
	reported by Michael Beauregard)

2012-09-04 John Wu <John dot Wu at ACM dot org>
	* src/islice.cpp: slice::constructT reverses the order of the bits
	to match the order used in iskive.cpp (in order to correctly reuse
	the functions such as evalGE and evalEQ)
	* src/array_t.h: reorganize the tests in function push_back to
	avoid the possibility of a producing a negative value for nexist
	(potentially the problem reported by Michael Beauregard about an
	exception complaining about array_t must have less than 2^31
	elements)

2012-09-03 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp: part::reorderBitmap neglected to use iorder,
	'make check' passes with the null value in test0.csv - reordering
	functions can work with null masks now
	* src/part.cpp:372 expand the test on readonly condition (previous
	version causes an exception)

2012-09-02 John Wu <John dot Wu at ACM dot org>