@@ -1458,6 +1458,16 @@ ibis::table* ibis::filter::sift2(const ibis::selectClause  &tms,
 	if (ibis::gVerbose > 4) {
 	    lg() << "\n";
 	    brd1->describe(lg());
+	    uint32_t nr = (ibis::gVerbose < 30 ? 1U << ibis::gVerbose : 0);
+	    if ((nr >> ibis::gVerbose) < 2)
+		nr = brd1->nRows();
+	    if (nr <= brd1->nRows()) {
+		brd1->dump(lg(), ", ");
+	    }
+	    else {
+		lg() << "\t... first " << nr << " row" << (nr>1?"s":"");
+		brd1->dump(lg(), nr, ", ");
+	    }
 	}
     }
     if (brd1->nRows() == 0) {
@@ -1491,6 +1501,16 @@ ibis::table* ibis::filter::sift2(const ibis::selectClause  &tms,
 	if (ibis::gVerbose > 4) {
 	    lg() << "\n";
 	    brd2->describe(lg());
+	    uint32_t nr = (ibis::gVerbose < 30 ? 1U << ibis::gVerbose : 0);
+	    if ((nr >> ibis::gVerbose) < 2)
+		nr = brd2->nRows();
+	    if (nr <= brd2->nRows()) {
+		brd2->dump(lg(), ", ");
+	    }
+	    else {
+		lg() << "\t... first " << nr << " row" << (nr>1?"s":"");
+		brd2->dump(lg(), nr, ", ");
+	    }
 	}
     }
     return brd2.release();
